# vozik-shop

./: .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 12a052380068_added_withdrawal_model.py  2f80ec1ea60a_changed_referrer_to_user_id.py  3cced56598b2_add_language_to_user.py  41dc955560a4_new_order_type_and_date_type_fixes.py  522acf46fd38_add_processing_order_status.py  695ab68c42de_changing_enum_a_little.py  9f2f7b7c1f0a_add_default_ton_wallet_to_users.py  b3f9d4c2a1e7_rename_referral_balance_columns.py  c8396aae5b97_add_withdrawals_table.py  cf1e75773f20_added_username_to_order_remove_usd_price.py  e474df0849d7_initial.py  e5169502af08_added_active_referral_count.py
src/buy_stars/: config.py  count_active_referrals.py  main.py  server.py  webhook_server.py
src/buy_stars/api/: external_routes.py
src/buy_stars/db/: session.py
src/buy_stars/filters/: is_admin.py
src/buy_stars/handlers/: buy_stars_handlers.py  buy_tg_premium_handlers.py  gift_promo_handlers.py  language_handlers.py  profile_handlers.py  sell_stars_handlers.py  start_handlers.py  withdrawal_handlers.py
src/buy_stars/keyboards/: buy_stars_keyboard.py  buy_tg_premium_keyboard.py  language_keyboard.py  menu_keyboard.py  sell_stars_keyboard.py  settings_keyboard.py  withdraw_keyboard.py
src/buy_stars/locales/: en.json  ru.json  ua.json
src/buy_stars/middlewares/: ban_check.py  private_chat_only.py  (+1 more)
webapp/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
webapp/src/: App.jsx  index.css
(+66 files in other folders)
