[project]
name = "buy-stars"
version = "0.1.0"
description = ""
authors = [
    {name = "Artem",email = "captainivliev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram (>=3.21.0,<4.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "aiohttp (>=3.12.14,<4.0.0)",
    "greenlet (>=3.2.3,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytz (>=2025.2,<2026.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "telethon (>=1.40.0,<2.0.0)",
    "tonsdk (>=1.0.15,<2.0.0)",
    "black (>=26.3.1,<27.0.0)"
]

[tool.poetry]
packages = [{include = "buy_stars", from = "src"}]


[tool.poetry.group.dev.dependencies]
alembic = "^1.16.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
